--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Inconsolata', monospace;
   font-size: 2.5vh;
   color: black;
+  box-sizing: border-box;
 }
 header{
 	font-family: 'Rubik', sans-serif;
@@ -39,11 +40,55 @@ section#hello header{
 	background-size:cover;
 }
 
-section#work header{
-	background:silver url("images/cl7.png") center center no-repeat;
-	background-size:cover;	
+section#work{
+padding: 20px;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin:40px auto;
 }
-
+section ul{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-bottom: 20px;
+}
+section ul li{
+	list-style: none;
+	background: #eee;
+	padding: 12px 20px
+	margin: 5px;
+	letter-spacing: 1px;
+	cursor: pointer;
+}
+section ul li.active{
+	background: #000;
+	color: #fff;
+}
+.product{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.product .itemBox{
+	position: relative;
+	width: 200px;
+	height: 200px;
+	margin: 5px;
+	display: block;
+}
+.product .itemBox img{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 section#contact header{
 	background:silver url("images/dots.jpg") center center no-repeat;
 	background-size:cover;	
