--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ section#hello header{
 }
 
 section#work{
-padding: 20px;
+padding: 100px;
 width: 100%;
 display: flex;
 justify-content: center;
@@ -55,14 +55,15 @@ section ul{
 	align-items: center;
 	flex-wrap: wrap;
 	margin-bottom: 20px;
+
 }
 section ul li{
 	list-style: none;
 	background: #eee;
-	padding: 12px 20px
-	margin: 5px;
+	padding: 24px 40px
 	letter-spacing: 1px;
 	cursor: pointer;
+    margin: 10px 2em 1%;
 }
 section ul li.active{
 	background: #000;
@@ -104,26 +105,4 @@ section#contact header{
 	margin:-70px 0 0;
 
 }
-.card h5{
-	font-family: 'Rubik', sans-serif;
-}
-.card p{
-	font-family: 'Inconsolata', monospace;
-	font-size: 2.5vh;
-	color: gray;
-}
-.card-img-top{
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
-	-webkit-filter: grayscale(100%);
-	-moz-filter: grayscale(100%);
-	-ms-filter: grayscale(100%);
-	filter: grayscale(100%);
-	filter: gray;
-}
 
-.card-img-top:hover {
-	-webkit-filter: none;
-	-moz-filter: none;
-	-ms-filter: none;
-	filter: none;
-}
