--- a/style.css
+++ b/style.css
@@ -115,6 +115,8 @@ main section#proyectos{
 main section#proyectos h1{
     font-size:calc(1.5rem + 1vw);
     line-height: 1;
+    font-family: 'Rubik', sans-serif;
+
 }
 
 main section#proyectos h3{
