--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section ul li.active{
 	object-fit: cover;
 }
 section#contact header{
-	background:silver url("images/dots.jpg") center center no-repeat;
+	background:silver url("images/graphic31.jpg") center center no-repeat;
 	background-size:cover;	
 }
 
