--- a/style.css
+++ b/style.css
@@ -25,14 +25,28 @@ font-family: 'Inconsolata', monospace;
 font-size: 3.2vh;
 color: gray;
 margin: auto;
+top: 0;
+z-index: 1000;
 }
 section header{
 height:auto;
 min-height: 100vh;
+
 }
 section#hello header{
-background:silver url("images/elisa.gif") center left no-repeat;
 background-size:cover;
+  display: absolute;
+  max-width: 100%;
+}
+section#hello video{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+
 }
 section#work{
 padding: 100px;
