--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ margin-bottom: 20px;
 section ul li{
 list-style: none;
 background: #eee;
-padding: 24px 40px
+padding: 24px 40px;
 letter-spacing: 1px;
 cursor: pointer;
 margin: 10px 2em 1%;
@@ -165,5 +165,12 @@ width: 50%;
 main section#proyectos div.div2 img{
 margin:4% 10% 4% 0%;
 
+	
 	}
+	main section#proyectos div.div2 img{
+margin:4% 10% 4% 0%;
+
+	
+	}
+
 
