--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ height: 100%;
 object-fit: cover;
 }
 section#contact header{
-background:silver url(https://github.com/elisahonorato/pagweb/blob/main/assets/images/graphic31.jpg?raw=true) center center no-repeat;
+background:silver url(https://github.com/elisahonorato/pagweb/blob/main/assets/images/graphic31.jpg) center center no-repeat;
 background-size:cover;	
 }
 :target:before {
