--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,8 +113,9 @@ height: 100%;
 object-fit: cover;
 }
 section#contact header{
-background:silver url(https://github.com/elisahonorato/pagweb/blob/main/assets/images/graphic31.jpg) center center no-repeat;
+background:silver url("../images/graphic31.jpg") center center no-repeat;
 background-size:cover;	
+
 }
 :target:before {
 content:"";
