--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ font-family: 'Inconsolata', monospace;
 font-size: 3.2vh;
 color: gray;
 margin: auto;
+margin-top: 0%;
 top: 0;
 z-index: 1000;
 }
