--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ height: 100%;
 object-fit: cover;
 }
 section#contact header{
-background:silver url("../images/graphic31.jpg");
+background-image:url("../images/graphic31.jpg");
 
 }
 :target:before {
