--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,8 @@ section#hello video {
 section#work {
 	padding: 100px;
 	width: 100%;
-	display: flex;
+	height: auto;
+	display:block;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
