--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,45 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Rubik:wght@400;500&display=swap');
-
 body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Inconsolata', monospace;
-	font-size: 2.9vh;
-	color: black;
-	box-sizing: border-box;
+margin: 0;
+padding: 0;
+font-family: 'Inconsolata', monospace;
+font-size: 2.9vh;
+color: black;
+box-sizing: border-box;
 }
-
-header {
-	font-family: 'Rubik', sans-serif;
-	font-size: 5vh;
-	color: gray;
+header{
+font-family: 'Rubik', sans-serif;
+font-size: 5vh;
+color: gray;
 }
-
-* {
-	transition: all ease 0.5s;
+*{
+transition:all ease 0.5s;
 }
-
-:hover {
-	transition: all ease 0.5s;
+:hover{
+transition:all ease 0.5s;
 }
-
 .navbar-light .navbar-nav .nav-link {
-	color: rgba(0, 0, 0, 100.0);
-	font-family: 'Inconsolata', monospace;
-	font-size: 3.2vh;
-	color: gray;
-	margin: auto;
-	margin-top: 0%;
-	top: 0;
-	z-index: 1000;
+color: rgba(0,0,0,100.0);
+font-family: 'Inconsolata', monospace;
+font-size: 3.2vh;
+color: gray;
+margin: auto;
+margin-top: 0%;
+top: 0;
+z-index: 1000;
 }
-
-section header {
-	height: auto;
-	min-height: 100vh;
+section header{
+height:auto;
+min-height: 100vh;
 
 }
-
-section#hello header {
-	background-size: cover;
-	display: absolute;
-	max-width: 100%;
+section#hello header{
+background-size:cover;
+  display: absolute;
+  max-width: 100%;
 }
-
-section#hello video {
+section#hello video{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -57,146 +49,143 @@ section#hello video {
 	z-index: -1;
 
 }
-
-section#work {
-	padding: 100px;
-	width: 100%;
-	height: auto;
-	display:block;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+section#work{
+padding: 100px;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin:40px auto;
 }
-
-section ul {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-	margin-bottom: 20px;
+section ul{
+display: flex;
+justify-content: space-between;
+align-items: center;
+flex-wrap: wrap;
+margin-bottom: 20px;
 }
-
-section ul li {
-	list-style: none;
-	background: #eee;
-	padding: 24px 40px;
-	letter-spacing: 1px;
-	cursor: pointer;
-	margin: 10px 2em 1%;
+section ul li{
+list-style: none;
+background: #eee;
+padding: 24px 40px;
+letter-spacing: 1px;
+cursor: pointer;
+margin: 10px 2em 1%;
 }
-
-section ul li.active {
-	background: #000;
-	color: #fff;
+section ul li.active{
+background: #000;
+color: #fff;
 }
-
-.product {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
+.product{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
 }
-
-.product .itemBox {
-	position: relative;
-	width: 200px;
-	height: 200px;
-	margin: 5px;
-	display: block;
+.product .itemBox{
+position: relative;
+width: 200px;
+height: 200px;
+margin: 5px;
+display: block;
 }
-
-.product .itemBox.hide {
-	display: none;
+.product .itemBox.hide{
+display: none;
 }
-
-.product .itemBox.active {
+.product .itemBox.active{
 	animation: animate 0.4s ease;
 
 }
-
-@keyframes animate {
-	0% {
+@keyframes animate{
+	0%{
 		transform: scale(0.5);
 	}
-
-	100% {
+	100%{
 		transform: scale(1);
 	}
 }
-
-.product .itemBox img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+.product .itemBox img{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+object-fit: cover;
 }
 
-section#contact header {
-	background-image: url("../images/graphic31.jpg");
-
-}
+section#contact header{
+	background-image:url("../images/graphic31.jpg");
+	background-size:cover;
+	  display: absolute;
+	  max-width: 100%;
+	}
+	section#hello image{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		z-index: -1;
+	
+	}
 
 :target:before {
-	content: "";
-	display: block;
-	height: 70px;
-	margin: -70px 0 0;
+content:"";
+display:block;
+height:70px;
+margin:-70px 0 0;
 }
 
 
 /* Proyectos */
-main section#proyectos {
-	float: left;
-	margin: 4% 10% 4% 10%;
-	width: 80%;
+main section#proyectos{
+float:left;
+margin:4% 10% 4% 10%;
+width:80%;   
 }
-
-main section#proyectos h1 {
-	font-size: calc(1.2rem + 1vw);
-	line-height: 1;
-	font-family: 'Rubik', sans-serif;
+main section#proyectos h1{
+font-size:calc(1.2rem + 1vw);
+line-height: 1;
+font-family: 'Rubik', sans-serif;
 }
-
-main section#proyectos h6 {
-	font-size: 1.0rem;
-	line-height: 1.3;
-	margin: 0% 10% 2% 0%;
+main section#proyectos h6{
+font-size:1.0rem;
+line-height: 1.3;
+margin:0% 10% 2% 0%;
 }
-
-main section#proyectos div {
-	display: float;
-	margin: 0% 0% 0% 0%;
-	width: 80%;
+main section#proyectos div{
+display: float;
+margin:0% 0% 0% 0%;
+width: 80%;
 
 }
 
-main section#proyectos div.img {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	width: 100%;
+main section#proyectos div.img{
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+width: 100%;
 
 }
-
-main section#proyectos div.div2 {
-	display: flex;
-	flex-direction: column;
-	width: 50%;
-
-}
-
-main section#proyectos div.div2 img {
-	margin: 4% 10% 4% 0%;
-
+main section#proyectos div.div2{
+display: flex;
+flex-direction: column;
+width: 50%;
 
 }
+main section#proyectos div.div2 img{
+margin:4% 10% 4% 0%;
 
-main section#proyectos div.div2 img {
-	margin: 4% 10% 4% 0%;
+	
+	}
+	main section#proyectos div.div2 img{
+margin:4% 10% 4% 0%;
+
+	
+	}
 
 
-}
