--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ section#contact header{
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: auto;
 		object-fit: cover;
 		z-index: -1;
 	
