--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,8 +124,8 @@ section#contact header{
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: auto;
+		width: auto;
+		height: 100%;
 		object-fit: cover;
 		z-index: -1;
 	
